Create month-calculation
